# framework.uifw.harfbuzz

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  configure.ac  harfbuzz.manifest  harfbuzz.pc  project.config
debian/: changelog  control  libharfbuzz-dev.install  libharfbuzz.install  libharfbuzz.install~~  rules
harfbuzz-0.1/: Makefile  harfbuzz.pc
harfbuzz-0.1/debian/: changelog  control  copyright  files  libharfbuzz.install
harfbuzz-0.1/debian/libharfbuzz-dbg/DEBIAN/: control  md5sums
harfbuzz-0.1/debian/libharfbuzz-dev/DEBIAN/: control  md5sums
harfbuzz-0.1/debian/libharfbuzz/DEBIAN/: control  md5sums
harfbuzz-0.1/include/: harfbuzz-global.h  harfbuzz-impl.h  harfbuzz-shaper-private.h  harfbuzz-shaper.h  harfbuzz.h
harfbuzz-0.1/src/: harfbuzz-arabic.c  harfbuzz-buffer.c  harfbuzz-external.c  harfbuzz-gdef.c  harfbuzz-gpos.c  harfbuzz-gsub.c  harfbuzz-hangul.c  harfbuzz-hebrew.c  harfbuzz-impl.c  harfbuzz-indic.c  harfbuzz-khmer.c  harfbuzz-myanmar.c  harfbuzz-open.c  harfbuzz-shaper-all.c  harfbuzz-shaper.c  harfbuzz-stream.c  harfbuzz-thai.c  harfbuzz-tibetan.c  harfbuzz.c
include/: harfbuzz-global.h  harfbuzz-shaper-private.h
packaging/: harfbuzz.spec
src/: harfbuzz-buffer.c  harfbuzz-external.c  harfbuzz-gdef.c  harfbuzz-impl.c  harfbuzz-indic.c  harfbuzz-khmer.c  harfbuzz-myanmar.c  harfbuzz-shaper.c  harfbuzz-stream.c  harfbuzz-tibetan.c  hb-ot-layout-gsubgpos-private.hh  hb-ot-shape-complex-private.hh  hb-unicode-private.hh  hb-unicode.cc  hb-unicode.h  hb-version.h
test/shaping/: Makefile.in
(+12 files in other folders)
