CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(harfbuzz C)
SET(VERSION_MAJOR 0)
SET(VERSION "${VERSION_MAJOR}.0.1")

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED libxml-2.0)

SET(SRCS
	src/harfbuzz-dump.c
	src/harfbuzz-shaper-all.c
	src/harfbuzz-external.c
	src/harfbuzz.c)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION ${VERSION_MAJOR})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION ${VERSION})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)
INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/include DESTINATION include/${PROJECT_NAME})
INSTALL(FILES ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}.pc DESTINATION lib/pkgconfig)
